fix: Modify action propose description

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,7 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'JMeter Plugin Deployment'
+description:
+  'Automatically deploy JMeter Plugin into JMeter Plugins Manager repository'
+author: 'Blazemeter'
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
