--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/rest": "^21.0.2"
   },
   "devDependencies": {
     "@github/local-action": "^2.1.3",
@@ -90,5 +92,6 @@
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
-  }
+  },
+  "type": "module"
 }
