feat: Add input for release note and ignore dependecies
'changes' input will allow to specify the breif release note that is
added to jmeter-plugins.

'ingore-dependecies' will allow to avoid publishing to jmeter-plugins
vertain artifacts that are attached into the github release but aren't
required to be added in jmeter-plugins release. There might be some
interesting use cases for this particular input. The initial development
purpose was to avoid adding the bzm-repositories library currently
attached to some of the ACR github releases, as a plugin library in the
jmeter-plugins release. The bzm-repositories it's a plugin by itself
that does not have at the moment a place for the jar file to be release
other than the ACR github release. Mainly becouse it's a propietary and
sensitive development that can't reach public access.

--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ branding:
 inputs:
   jmeter-plugins-repository:
     description: 'Url of target jmeter-plugins repository'
-    required: true
+    required: false
     default: 'https://github.com/undera/jmeter-plugins.git'
   forked-repository:
     description:
@@ -26,10 +26,14 @@ inputs:
   plugin-id:
     description: 'Registered ID for identifing the plugin in jmeter-plugins'
     required: true
-  repo-file-path:
-    description: 'Where to look and publish the plugin'
+  changes:
+    description: 'Release note line'
     required: true
-    default: 'site/dat/repo/blazemeter.json'
+  ignore-dependencies:
+    description:
+      "Prefix of dependencies separated by commas, which won't be taken into
+      consideration at jmeter-plugins release but are present in github release"
+    required: false
 
 runs:
   using: node20
