fix: Change jmeter-plugin repo input name
Simply have two concepts. The upstream repository and the forked
repository. The old jmeter-plugins-repository name for the input was
confusing

--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ branding:
 
 # Define your inputs here.
 inputs:
-  jmeter-plugins-repository:
+  upstream-repository:
     description: 'Url of target jmeter-plugins repository'
     required: false
     default: 'https://github.com/undera/jmeter-plugins.git'
