fix: Consume imports as JS instead of TS
Since we are using ncc to bundle the code. There is an issue when
enabling `"allowImportingTsExtensions": true` in typescript config which
won't recognize `noEmit:true` set and it will fail the boundling saying
something in the lines of missing noEmit key.

Therefore, there is a reason to back up on the allowImportingTsExtension
and keep using the esm standard of import which will be by adding the js
extension even though we are using ts.

--- a/package.json
+++ b/package.json
@@ -41,10 +41,24 @@
     "extends": "./.github/linters/.eslintrc.yml"
   },
   "jest": {
-    "preset": "ts-jest",
+    "preset": "ts-jest/presets/default-esm",
     "verbose": true,
     "clearMocks": true,
     "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(\\@octokit/rest|\\@octokit/core)/)"
+    ],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    },
     "moduleFileExtensions": [
       "js",
       "ts"
@@ -69,6 +83,12 @@
       "./src/**"
     ]
   },
+  "ncc": {
+    "compilerOptions": {
+      "allowImportingTsExtensions": true,
+      "noEmit": true
+    }
+  },
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
@@ -81,7 +101,7 @@
     "@types/node": "^22.8.7",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
-    "@vercel/ncc": "^0.38.2",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsonc": "^2.16.0",
