--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,23 @@ jobs:
       - name: Test
         id: npm-ci-test
         run: npm run ci-test
+
+  test-action:
+    name: GitHub Actions Test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Test Local Action
+        id: test-action
+        uses: ./
+        with:
+          upstream-repository: https://github.com/Abstracta/jmeter-plugins.git
+          forked-repository: https://github.com/Abstracta/jmeter-plugins.git
+          plugin-artifact-name: jmeter-bzm-correlation-recorder
+          plugin-id: bzm-siebel
+          changes: some changes
+          token: ${{ secrets.GITHUB_TOKEN }}
