fix: Add posibility to setup GITHUB_REPOSITORY variable
Unfortunately, the GITHUB_REPOSITORY environment variable in GitHub
Actions is immutable for the runtime of a workflow. Therefore in order
to actually create a good integrational test using the action. This
additon had to be done.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           changes: some changes
           token: ${{ secrets.GITHUB_TOKEN }}
         env:
-          GITHUB_REPOSITORY: 'Blazemeter/CorrelationRecorder'
+          TEST_GITHUB_REPOSITORY: 'Blazemeter/CorrelationRecorder'
 
       - name: Print PR link
         run: echo "${{ steps.test-action.outputs.pull_request }}"
