--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ ACTIONS_STEP_DEBUG=true
 # GitHub Actions inputs should follow `INPUT_<name>` format (case-sensitive).
 # Hyphens should not be converted to underscores!
 
-INPUT_UPSTREAM-REPOSITORY=https://github.com/abstracta/jmeter-plugins.git
-INPUT_FORKED-REPOSITORY=https://github.com/abstracta/jmeter-plugins.git
-INPUT_PLUGIN-ARTIFACT-NAME=jmeter-bzm-correlation-recorder
-INPUT_PLUGIN-ID=bzm-siebel
-INPUT_CHANGES="New Release"
-INPUT_IGNORE-DEPENDENCIES=bzm-repositories
+#INPUT_UPSTREAM-REPOSITORY=https://github.com/abstracta/jmeter-plugins.git
+#INPUT_FORKED-REPOSITORY=https://github.com/abstracta/jmeter-plugins.git
+#INPUT_PLUGIN-ARTIFACT-NAME=jmeter-bzm-correlation-recorder
+#INPUT_PLUGIN-ID=bzm-siebel
+#INPUT_CHANGES="New Release"
+#INPUT_IGNORE-DEPENDENCIES=bzm-repositories
 
 # GitHub Actions default environment variables. These are set for every run of a
 # workflow and can be used in your actions. Setting the value here will override
@@ -21,7 +21,7 @@ INPUT_IGNORE-DEPENDENCIES=bzm-repositories
 # https://docs.github.com/en/actions/learn-github-actions/variables#default-environment-variables
 
 # CI="true"
-# GITHUB_TOKEN=
+# GITHUB_TOKEN=""
 # GITHUB_ACTION=""
 # GITHUB_ACTION_PATH=""
 # GITHUB_ACTION_REPOSITORY=""
