fix: Improve filtering of ignored-dependecies
There was an issue related to ignoring dependencies causing that none of
the libs were processed when ingoredDependecies was empty. Filtering
adjusted in order to satify that it won't match every asset name when
empty.
Every string startsWith empty string, therefore we were excluding all
assets when ingore dependencies empty

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
           plugin-id: bzm-siebel
           changes: some changes
           token: ${{ secrets.GH_TOKEN }}
+          ignore-dependencies: bzm-repositories
         env:
           TEST_GITHUB_REPOSITORY: 'Blazemeter/CorrelationRecorder'
 
